kubectl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-backend
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: laravel-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: laravel-service
spec:
  selector:
    app: laravel
  ports:
    - port: 8000
      targetPort: 8000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
        - name: angular
          image: angular-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angular
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubectlhp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: vizsgaremek-inventory-backend.jcloud.jedlik.cloud
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80
